# capra_joy_to_bool

./: CMakeLists.txt  package.xml
src/: joy_to_bool_node.cpp
